Fix layout on IE 11

--- a/src/sass/blocks/index.sass
+++ b/src/sass/blocks/index.sass
@@ -19,7 +19,6 @@
   &__gallery
 
 .index-gallery
-  display: inline-block
   text-align: center
   font-size: 0
   line-height: 0
